--- a/roles/common/tasks/remove-unpacked-kafka.yml
+++ b/roles/common/tasks/remove-unpacked-kafka.yml
@@ -1,5 +1,5 @@
-- name: Remove unpacked kafka
-  file:
-    path: /home/confluent/kafka-3.3.2-src
-    state: absent
+#- name: Remove unpacked kafka
+#  file:
+#    path: /home/confluent/kafka-3.3.2-src
+#    state: absent
   
