--- a/roles/kafka_brokers/tasks/change-broker-id.yml
+++ b/roles/kafka_brokers/tasks/change-broker-id.yml
@@ -1,19 +1,20 @@
-#- name: Replace the line in the file
-#  lineinfile:
-#    dest: /home/confluent/confluent-7.3.1/etc/kafka/kraft/server.properties
-#    line: "node.id=1"
-#    state: absent
-    
-        
-#- name: Add the line to the file
-#  lineinfile:
-#    dest: /home/confluent/confluent-7.3.1/etc/kafka/kraft/server.properties
-#    line: "node.id=100"
-#    state: present
+- name: Replace the property value in the file
+  lineinfile:
+    dest: /home/confluent/confluent-7.3.1/etc/kafka/kraft/server1.properties
+    regexp: '^node.id=.*$'
+    line: "node.id=1"
+    state: present  
 
 - name: Replace the property value in the file
   lineinfile:
-    dest: /home/confluent/confluent-7.3.1/etc/kafka/kraft/server.properties
+    dest: /home/confluent/confluent-7.3.1/etc/kafka/kraft/server2.properties
     regexp: '^node.id=.*$'
-    line: "node.id=2000"
-    state: present        
+    line: "node.id=2"
+    state: present
+
+- name: Replace the property value in the file
+  lineinfile:
+    dest: /home/confluent/confluent-7.3.1/etc/kafka/kraft/server3.properties
+    regexp: '^node.id=.*$'
+    line: "node.id=3"
+    state: present      
