Added schemareg shit

--- a/roles/kafka_brokers/tasks/main.yml
+++ b/roles/kafka_brokers/tasks/main.yml
@@ -8,5 +8,8 @@
   #- create-cluster-id.yml
   #- change-log-dirs.yml
   #- format-storage-dir.yml
-  - start-brokers.yml
-  #- status-brokers.yml
+  #- create-service.yml
+  #- reload-service.yml
+  #- start-kafka-service.yml
+  - status-kafka-service.yml
+  
