--- a/roles/schema_registry/tasks/status-schemareg-service.yml
+++ b/roles/schema_registry/tasks/status-schemareg-service.yml
@@ -5,4 +5,4 @@
 
 - name: Print the status of each schema reg instance
   debug:
-    var: kafka_registry_status.stdout
+    var: schema_registry_status.stdout
