--- a/roles/kafka_brokers/tasks/main.yml
+++ b/roles/kafka_brokers/tasks/main.yml
@@ -11,5 +11,7 @@
   #- create-service.yml
   #- reload-service.yml
   #- start-kafka-service.yml
+  #- fetch-request-cert.yml
+  - send-signed-certs.yml
   - status-kafka-service.yml
   
