--- a/roles/kafka_brokers/tasks/format-storage-dir.yml
+++ b/roles/kafka_brokers/tasks/format-storage-dir.yml
@@ -8,6 +8,6 @@
 #  shell: /home/confluent/confluent-7.3.1/bin/kafka-storage format -t BfnTX9wnQgitegI8yjLSwg -c /home/confluent/confluent-7.3.1/etc/kafka/kraft/server2.properties  
 #  when: inventory_hostname == '20.86.65.62'
 
-- name: Format storage dir for uatgitbrkr13
-  shell: /home/confluent/confluent-7.3.1/bin/kafka-storage format -t BfnTX9wnQgitegI8yjLSwg -c /home/confluent/confluent-7.3.1/etc/kafka/kraft/server3.properties
-  when: inventory_hostname == '20.86.65.203'
+#- name: Format storage dir for uatgitbrkr13
+#  shell: /home/confluent/confluent-7.3.1/bin/kafka-storage format -t BfnTX9wnQgitegI8yjLSwg -c /home/confluent/confluent-7.3.1/etc/kafka/kraft/server3.properties
+#  when: inventory_hostname == '20.86.65.203'
